[tool.poetry]
name = "lykos"
version = "0.1"
description = "A library for fetching *OS keybags."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m1stadev/lykos"

[tool.poetry.scripts]
lykos = "lykos.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.2"
requests = "^2.31.0"
click = "^8.1.7"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/lykos/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
